congson-chart/templates/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rules
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: connected-city.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: connectedcity-service
                port:
                  number: 80
    - host: connected-factory.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: connectedfactory-service
                port:
                  number: 80
